base-deployments/keycloak/patch-templates/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: ${replicas}
